--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    
-
     repositories {
         mavenLocal()
         mavenCentral()
@@ -12,8 +10,6 @@ buildscript {
     dependencies {
         classpath 'org.wisepersist:gwt-gradle-plugin:1.0.9'
         classpath 'com.android.tools.build:gradle:3.6.1'
-        
-
     }
 }
 
@@ -46,14 +42,11 @@ allprojects {
 project(":desktop") {
     apply plugin: "java-library"
 
-
     dependencies {
         api project(":core")
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-
-
     }
 }
 
@@ -77,14 +70,12 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
-        
     }
 }
 
 /*project(":html") {
     apply plugin: "gwt"
     apply plugin: "war"
-
 
     dependencies {
         implementation project(":core")
@@ -98,7 +89,6 @@ project(":android") {
 project(":core") {
     apply plugin: "java-library"
 
-
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
@@ -106,6 +96,9 @@ project(":core") {
         api "com.esotericsoftware:kryonet:2.22.0-RC1"
 
         api "com.github.payne911:PieMenu:$pieMenuVersion"
+
+        api 'com.crashinvaders.vfx:gdx-vfx-core:0.4.3'
+        api 'com.crashinvaders.vfx:gdx-vfx-effects:0.4.3'
     }
 }
 
