--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:isGame="true"
         android:appCategory="game"
-        android:label="@string/app_name_beta"
+        android:label="@string/app_name"
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.cg.zoned.AndroidLauncher"
