--- a/html/build.gradle
+++ b/html/build.gradle
@@ -9,14 +9,14 @@ gwt {
     project.webAppDirName = 'webapp'
 
     compiler {
-        strict = true;
-        disableCastChecking = true;
+        strict = true
+        disableCastChecking = true
     }
 }
 
 import org.wisepersist.gradle.plugins.gwt.GwtSuperDev
 
-def HttpFileServer server = null
+HttpFileServer server = null
 def httpFilePort = 8080
 
 task startHttpServer () {
@@ -76,7 +76,7 @@ task addSource {
 tasks.compileGwt.dependsOn(addSource)
 tasks.draftCompileGwt.dependsOn(addSource)
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.7
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 
