UI commit 17: Blending improvements, ScoreBar shows score, version check
Player Labels feels hacky and blurry so I'll need to fix that sometime later

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
+        // Remember to update the GAME_VERSION in Constants.java too!
     }
     buildTypes {
         release {
