--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,12 +21,15 @@ android {
         minSdkVersion 14
         targetSdkVersion 29
         versionCode 1
-        versionName "0.0.1-beta" // Remember to update the GAME_VERSION in Constants.java too !!
+        versionName "0.0.1-beta"
+        // Remember to update the GAME_VERSION in Constants.java
+        // And project.setVersion in Desktop's build.gradle
+        // Or for Linux users, use the versionUpdate.sh script
     }
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false // Don't set this to true because it'll result in a lot of classes missing causing Runtime crashes
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
