Fix crash when running standalone jars

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+
+        implementation files("../core/libs/discord-rpc.jar")
     }
 }
 
