--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 
     version = '1.0'
     ext {
-        appName = "zoned"
+        appName = "Zoned"
         gdxVersion = '1.9.10'
         roboVMVersion = '2.3.6'
         box2DLightsVersion = '1.4'
@@ -75,6 +75,7 @@ project(":android") {
     }
 }
 
+// No HTML support since the game uses Kryonet which isn't supported there
 /*project(":html") {
     apply plugin: "gwt"
     apply plugin: "war"
@@ -97,6 +98,7 @@ project(":core") {
 
         api "com.esotericsoftware:kryonet:2.22.0-RC1"
         api "com.github.payne911:PieMenu:$pieMenuVersion"
+        // Pie menu depends on ShapeDrawer, so that'll get imported as well
 
         implementation files("libs/discord-rpc.jar")
     }
