--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -5,6 +5,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 project.ext.mainClassName = "com.cg.zoned.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../android/assets")
+project.setProperty("archivesBaseName", appName)
 project.setVersion("0.0.1-beta")
 // Remember to update the GAME_VERSION in Constants.java
 // And versionName in Android's build.gradle
