--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,8 @@ android {
         // And project.setVersion in Desktop's build.gradle
         // And the version in the badge in the README file
         // Or for Linux users, use the versionUpdate.sh script
+
+        setProperty("archivesBaseName", "${appName}-${versionName}")
     }
     buildTypes {
         release {
