Custom external map functionality for local network multiplayer mode
Used a Ninepatch for the playmode stage, so I think it would be faster? At least it should look better now. Also, changed version to v0.0.3-dev to show that this is a development version and avoid clashes with the beta versions. Tested the networking, but might have bugs, hard to test every possible scenario. A bit of cleanup on the code coming soon

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -6,7 +6,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 project.ext.mainClassName = "com.cg.zoned.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../android/assets")
 project.setProperty("archivesBaseName", appName)
-project.setVersion("0.0.2-beta")
+project.setVersion("0.0.3-dev")
 // Remember to update the GAME_VERSION in Constants.java
 // And versionName in Android's build.gradle
 // And the version in the badge in the README file
