--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -1,4 +1,4 @@
-name: Auto publish development releases (Bleeding edge releases) for Desktop
+name: Publish development release
 
 # Controls when the action will run
 on:
@@ -26,14 +26,14 @@ jobs:
 
     - name: Build jar
       run: ./gradlew desktop:dist
-      
+        
     - name: Upload jar as a release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: desktop/build/libs/*.jar
         file_glob: true
-        tag: ${{ github.ref }}
+        tag: v-dev
         overwrite: true
         prerelease: true
         body: "Latest bleeding edge version of Zoned. Might be buggy"
