Updated libGDX logo and link in the credits, RPC code improvements
Android builds should now be smaller as the Discord RPC code will no longer be bundled in it

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'org.wisepersist:gwt-gradle-plugin:1.0.9'
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:3.6.3' // Updating this might break shit so meh
     }
 }
 
@@ -20,11 +20,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = "Zoned"
-        gdxVersion = '1.9.10'
-        roboVMVersion = '2.3.6'
-        box2DLightsVersion = '1.4'
-        ashleyVersion = '1.7.0'
-        aiVersion = '1.8.0'
+        gdxVersion = '1.9.10' // Should I update? Hmm
         pieMenuVersion = '4.2.0'
     }
 
@@ -75,7 +71,7 @@ project(":android") {
     }
 }
 
-// No HTML support since the game uses Kryonet which isn't supported there
+// No HTML support since the game uses Kryonet and generated FreeTypeFonts which isn't supported there
 /*project(":html") {
     apply plugin: "gwt"
     apply plugin: "war"
@@ -98,9 +94,7 @@ project(":core") {
 
         api "com.esotericsoftware:kryonet:2.22.0-RC1"
         api "com.github.payne911:PieMenu:$pieMenuVersion"
-        // Pie menu depends on ShapeDrawer, so that'll get imported as well
-
-        implementation files("libs/discord-rpc.jar")
+        // Piemenu depends on ShapeDrawer, so that'll get imported as well
     }
 }
 
