--- a/.github/workflows/deploy-gwt.yml
+++ b/.github/workflows/deploy-gwt.yml
@@ -30,5 +30,5 @@ jobs:
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gwt
-        FOLDER: build/dist
+        FOLDER: html/build/dist
         CLEAN: false
