Newline in the CSS
Also, doctype -> DOCTYPE (Testing stuff)

--- a/html/build.gradle
+++ b/html/build.gradle
@@ -91,7 +91,7 @@ task zonedDist(dependsOn: [dist]) {
         exec {
             workingDir 'build/dist'
             commandLine 'sed', '-i', '$a \\\n\\n' +
-                    'canvas {' +
+                    'canvas {\\n' +
                     '  border-radius: 12px;\\n' +
                     '  margin-top: 25px;\\n' +
                     '}\\n' +
