--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
 
-        implementation files("../core/libs/discord-rpc.jar")
+        // Discord RPC Library
+        api 'com.github.Vatuu:discord-rpc:1f82937'
     }
 }
 
