--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,9 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
 
-        // Discord RPC Library (TODO: Debug windows crash)
-        api 'com.github.Vatuu:discord-rpc:1f82937'
+        // Discord RPC Library
+        // api 'com.github.Vatuu:discord-rpc:1f82937'  // (Crashes on Windows)
+        api 'com.github.Spikatrix:discord-rpc:dce25ff' // (My fork with the Windows crash issue fix)
     }
 }
 
