--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "java-library"
 
 sourceCompatibility = 1.8
+java.targetCompatibility = JavaVersion.VERSION_1_8
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 project.ext.mainClassName = "com.cg.zoned.desktop.DesktopLauncher"
