Fixed web links not working on Android 11

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -26,4 +26,10 @@
         </activity>
     </application>
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="http" />
+        </intent>
+    </queries>
 </manifest>
