Explore custom maps link, Minor other improvements

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
     </application>
 
+    <!-- Fixes Gdx.net.openURI not working on Android 11 -->
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
